// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search – index create 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "61",
    "content-type": "application/json",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "description": "example description",
    "display_name": "foobar",
  },
  "method": "POST",
  "url": "https://search.api.globus.org/v1/index",
}
`;

exports[`search – index create role 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "54",
    "content-type": "application/json",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "principal": "some-principal-urn",
    "role_name": "admin",
  },
  "method": "POST",
  "url": "https://search.api.globus.org/v1/index/some-uuid/role",
}
`;

exports[`search – index delete role 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "DELETE",
  "url": "https://search.api.globus.org/v1/index/some-uuid/role/some-role-id",
}
`;

exports[`search – index get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://search.api.globus.org/v1/index/524de2f6-d1a6-4b49-9286-d8dccb4196ae",
}
`;

exports[`search – index get roles 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://search.api.globus.org/v1/index/some-uuid/role_list",
}
`;

exports[`search – index getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://search.api.globus.org/v1/index_list",
}
`;

exports[`search – index ingest 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "85",
    "content-type": "application/json",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "POST",
  "url": "https://search.api.globus.org/v1/index/some-uuid/ingest",
}
`;

exports[`search – index remove 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "DELETE",
  "url": "https://search.api.globus.org/v1/index/some-uuid",
}
`;

exports[`search – index reopen 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "0",
    "host": "search.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "POST",
  "url": "https://search.api.globus.org/v1/index/some-uuid/reopen",
}
`;
